# btvn04_tuannghia_ivs

./: CMakeLists.txt  README.md  frames_2026-05-14_23.31.54.gv  package.xml
include/ackermann_lifecycle_pkg/: ackermann_kinematics.hpp
scripts/: compare_kinematics.py  kinematics_comparison.csv  odometry_noise.py  run_s_curve.sh
src/: ackermann_kinematics.cpp  ackermann_kinematics_node.cpp  ackermann_system_manager.cpp  minimal_lifecycle_node.cpp
test/: test_ackermann_kinematics.cpp
